@@ -1370,6 +1370,7 @@ CREATE TABLE events (
     customerid int(11) NOT NULL DEFAULT '0',
     private tinyint(1) NOT NULL DEFAULT '0',
     closed tinyint(1) NOT NULL DEFAULT '0',
+    creationdate int(11) NOT NULL DEFAULT '0',
     moddate int(11) NOT NULL DEFAULT '0',
     moduserid int(11) NOT NULL DEFAULT '0',
     type smallint NOT NULL DEFAULT 1,
@@ -2556,4 +2557,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2016040700');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2016051000');
